# kalitron-sporting-edge

./: .env.example  .gitignore  Dockerfile  README.md  check_baseball_markets.py  docker-compose.yml  pyproject.toml  setup.sh
docs/adr/: ADR-001-modelo-predictivo-dixon-coles.md  ADR-002-tipo-orden-fak.md  ADR-003-kelly-fraccionado.md  ADR-004-clob-v2.md  ADR-005-clv-metrica-primaria.md  ADR-006-ev-threshold-diferenciado.md  ADR-007-neutral-venue-international-tournaments.md  ADR-008-outright-tournament-trading.md  README.md
docs/sdd/: EPIC-001-signal-quality-edge-validation.md  EPIC-002-world-cup-2026-integration.md  EPIC-003-outright-tournament-trading.md
migrations/versions/: 001_initial_schema.sql  002_position_manager.sql  003_signal_fill_metrics.sql  004_settlement_source.sql  005_lineup_checked.sql  006_bet_type.sql  007_bet_match_id_nullable.sql
src/sporting_edge/: __init__.py  cli.py
src/sporting_edge/agents/: __init__.py  bet_settler.py  clv_tracker.py  data_collector.py  execution_agent.py  model_predictor.py  odds_analyzer.py  outright_analyzer.py  outright_collector.py  position_manager.py  report_agent.py  risk_manager.py  shock_detector.py
src/sporting_edge/api/: main.py
src/sporting_edge/api/routers/: markets.py  pipeline.py  positions.py  standings.py
src/sporting_edge/backtesting/: __init__.py  engine.py
src/sporting_edge/config/: logging.py  settings.py
src/sporting_edge/db/: __init__.py  models.py  session.py
src/sporting_edge/graph/: __init__.py  orchestrator.py  outright_pipeline.py
src/sporting_edge/models/: __init__.py  schemas.py
src/sporting_edge/tools/: __init__.py  football_api.py  polymarket_streamer.py  polymarket_tools.py
tests/: conftest.py  test_backtesting.py  test_bet_settler.py  test_clv_tracker.py  test_lineup_predictor.py  test_model_predictor.py  test_odds_analyzer.py  test_risk_manager.py  test_standings.py
