[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalitron-sporting-edge"
version = "0.1.0"
description = "Multi-agent AI system for finding value bets in football prediction markets on Polymarket"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # === Orchestration ===
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",

    # === Anthropic Claude ===
    "anthropic>=0.40.0",

    # === Polymarket CLOB ===
    "py-clob-client-v2",

    # === Database ===
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",   # sync driver for alembic

    # === API Server ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",             # async HTTP client for external APIs

    # === Data & Validation ===
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # === Data Science ===
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pandas>=2.2.0",

    # === Scheduling ===
    "apscheduler>=3.10.0",
    "websockets>=12.0",             # Polymarket real-time WS stream

    # === Notifications ===
    "python-telegram-bot>=21.0",

    # === Utilities ===
    "structlog>=24.0.0",        # structured JSON logging
    "tenacity>=8.2.0",          # retry with backoff
    "rich>=13.0.0",             # pretty terminal output
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipython>=8.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",            # mock httpx requests in tests
    "factory-boy>=3.3.0",
]
backtest = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
sporting-edge = "sporting_edge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sporting_edge"]

# === Ruff linter ===
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

# === Pytest ===
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

# === MyPy ===
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
